welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: value lenght is not a member of Array[Int]
	for (k <- 0 to nums.lenght-1){
                            ^